@@ -4,6 +4,9 @@ Kodeine Change log
 * = Autre / Divers / Inclassable...
 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+2012-11-22 (build 5.0.11)
+- content/data : correction de la fonction JS dupli() qui duplique les prix sur tous les groupes dans les content de type business
+
 2012-11-21 (build 5.0.10)
 - api.content : contentRemove > si pas de langue definie alors on supprime le contenu et toutes ses langues + verification des parametres id_type et id_content
 - /content/data : ajout bouton supprimer le contenu
